--- a/environment.yml
+++ b/environment.yml
@@ -86,8 +86,6 @@ dependencies:
   - zipp=2.2.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
-  - pytorch=1.6.0.dev20200424=py3.7_cuda10.1.243_cudnn7.6.3_0
-  - torchvision=0.7.0.dev20200424=py37_cu101
   - pip:
     - absl-py==0.9.0
     - cachetools==4.1.0
@@ -117,9 +115,8 @@ dependencies:
     - tensorboard==2.2.1
     - tensorboard-plugin-wit==1.6.0.post3
     - test-tube==0.7.5
-    - torch==1.6.0.dev20200424
     - tqdm==4.45.0
     - urllib3==1.25.9
     - werkzeug==1.0.1
-prefix: /home/ab8690/.conda/envs/driving-dirty
+prefix: /home/nsk367/.conda/envs/driving-dirty
 
